--- a/backend/event-bus/package.json
+++ b/backend/event-bus/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "comments",
+  "name": "event-bus",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,10 +11,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
-    "express": "^5.1.0",
-    "express-cors": "^0.0.3",
-    "mariadb": "^3.4.5"
+    "express": "^5.1.0"
   }
 }
